--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,9 +42,9 @@
              height="57">
         <h1 class="h3 mb-3 fw-normal">로그인</h1>
 
-        <a class="w-100 mb-1 btn btn-lg btn-primary" type="button" href="/oauth/authorization/google">google</a>
-        <button class="w-100 mb-1 btn btn-lg btn-success" type="submit">naver</button>
-        <button class="w-100 btn btn-lg btn-warning" type="submit">kakao</button>
+        <a href="/oauth2/authorization/google" class="w-100 mb-1 btn btn-lg btn-primary" role="button">google</a>
+        <a class="w-100 mb-1 btn btn-lg btn-success" type="submit">naver</a>
+        <a href="/oauth2/authorization/kakao" class="w-100 btn btn-lg btn-warning" type="submit">kakao</a>
         <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
     </form>
 </main>
